@@ -1,3 +1,13 @@
+2011-09-08  Varun Jain  <varunjain@google.com>
+
+        Implement double tap detection in GestureRecognizerChromium
+        https://bugs.webkit.org/show_bug.cgi?id=67709
+
+        Reviewed by Dimitri Glazkov.
+
+        *  Source/WebCore/page/EventHandler.cpp:
+        *  Source/WebCore/platform/PlatformGestureEvent.h:
+
 2011-09-08  Ulan Degenbaev  <ulan@chromium.org>
 
         [v8] Improve performance of typed array set() taking Array
